# supaclaw

./: AGENTS.md  ARCHITECTURE.md  BLOG_POST.md  DEPLOY.md  LICENSE  NOTES.md  PRD.md  README.md  SECURITY.md  TESTS.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PRD.md  SECURITY.md  TESTS.md
executor/: PRD.md  PRD_alt.md
office_to_png/: Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  install.sh  office_to_png.py  pyproject.toml  requirements.txt
office_to_png/office_to_png/: __init__.py  __main__.py  cli.py  http_api.py
scripts/: deploy-local-vault-secrets.sh  download-agents-storage.sh  install.sh  ngrok-helper.sh  remove-local-telegram-webhook.sh  seed-agents-storage.sh  seed-source-code.sh  set-local-telegram-webhook.sh
supabase/: .env.example  .gitignore  config.toml
supabase/functions/_shared/: agent.ts  bot.ts  channels.ts  config.json  context.ts  cron_tools.ts  database.types.ts  deno.json  documents.ts  embeddings.ts  env.ts  files.ts  helpers.ts  http.ts  jwt.ts  llm.ts  logger.ts  ocr.ts  skills.ts  storage.ts  supabase.ts  tasks.ts  telegram.ts  workspace_tools.ts
supabase/functions/agent-worker/: deno.json  index.ts
supabase/functions/slack/: deno.json  index.ts
supabase/functions/telegram-webhook/: deno.json  index.ts
supabase/functions/trigger-webhook/: index.ts
supabase/functions/webhook/: deno.json  index.ts
supabase/migrations/: 0000000000000_init.sql  20260218153846_add-task-table.sql  20260219182015_add-search-score.sql
supabase/schemas/: 01_schema.sql
workspace/.agents/: AGENTS.md  SOUL.md  USER.md
(+11 files in other folders)
