[project]
name = "office_to_png"
version = "0.1.0"
description = "Convert Office docs and PDFs to per-page PNGs (LibreOffice + PDFium)."
requires-python = ">=3.10"
dependencies = [
  "pypdfium2==5.5.0",
  "Pillow==12.1.1",
]

[project.scripts]
office_to_png = "office_to_png.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

