[project]
name = "office-to-png"
version = "0.1.0"
description = "Convert Office docs and PDFs to per-page PNGs (LibreOffice + PDFium)."
requires-python = ">=3.10"
dependencies = [
  "pypdfium2==5.5.0",
  "Pillow==12.1.1",
]

[project.optional-dependencies]
# Optional: slim HTTP wrapper that downloads/uploads via Supabase Storage APIs
# using a passed user JWT (user-scoped policies).
server = [
  "fastapi==0.115.11",
  "uvicorn[standard]==0.34.0",
  "supabase==2.18.1",
]

[project.scripts]
office-to-png = "office_to_png:cli"
office_to_png = "office_to_png:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

