[project]
name = "office-to-png"
version = "0.1.0"
description = "Convert Office docs and PDFs to per-page PNGs (LibreOffice + PDFium)."
requires-python = ">=3.10"
dependencies = [
  "pypdfium2==5.5.0",
  "Pillow==12.1.1",
]

[project.scripts]
office-to-png = "office_to_png:cli"
office_to_png = "office_to_png:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

